# blendify-web

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
blendify/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  blendify_utils.py  consumers.py  models.py  openai_utils.py  routing.py  spotify_utils.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_generated.py  0002_song.py  0003_remove_playlist_playlist_text_playlist_song_list.py
core/static/core/: accordion-list.css  blend.js  buttons.css  checkbox.css  dropdown.css  input-box.css  manifest.json  navigation.css  style.css  text.css
core/templates/: blend.html  footer.html  hathor.html  home.html  lorumipsum.html  navbar.html
