[project]
name = "blendify-web"
version = "0.0.1"
description = "blendify... on the web!"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "channels>=4.2.2",
    "django>=5.2.3",
    "django-bootstrap5>=25.1",
    "openai>=1.87.0",
    "python-dotenv>=1.1.0",
    "social-auth-app-django>=5.4.3",
]
