[project]
name = "blendify-web"
version = "0.1.4"
description = "blendify... on the web!"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backoff>=2.2.1",
    "channels>=4.2.2",
    "daphne>=4.2.0",
    "django>=5.2.3",
    "django-bootstrap5>=25.1",
    "dotenv>=0.9.9",
    "openai>=1.87.0",
    "python-dotenv>=1.1.0",
    "social-auth-app-django>=5.4.3",
    "whitenoise>=6.9.0",
]
